<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunta1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="281dp"
        android:layout_height="132dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/RespuestaCorrecta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Respuesta_correcta" />

        <RadioButton
            android:id="@+id/Respuestaincorrecta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RespuestaFalsa1" />

        <RadioButton
            android:id="@+id/Respuestaincorrecta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RespuestaFalsa2" />

        <RadioButton
            android:id="@+id/Respuestaincorrecta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RespuestaFalsa3" />
    </RadioGroup>

    <Button
        android:id="@+id/comprobar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:onClick="Respuesta"
        android:text="@string/Comprobar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Puntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="268dp"
        android:text="@string/Puntuacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>